Add register API Doc
